pxc/tests/test_109_fixed/dsp2.px
namespace dsp2;
import common -;

println(dsplit{3}("abc:def:xyz", ':')); // error

